[gd_scene load_steps=5 format=3 uid="uid://rnhm1enuxv6q"]

[ext_resource type="Script" path="res://UI/GlobalOverlay.gd" id="1_tkmo4"]
[ext_resource type="FontFile" uid="uid://j71bxuhfo0u7" path="res://Assets/Fonts/data-latin.ttf" id="1_xbdg5"]
[ext_resource type="Script" path="res://UI/Frame.gd" id="2_hr3b2"]
[ext_resource type="Script" path="res://UI/GameButton.gd" id="3_0d3qd"]

[node name="GlobalOverlay" type="CanvasLayer"]
script = ExtResource("1_tkmo4")

[node name="Frame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 64.0
offset_bottom = 656.0
script = ExtResource("2_hr3b2")

[node name="ColorRect" type="ColorRect" parent="Frame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="ExitButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("1_xbdg5")
theme_override_font_sizes/font_size = 24
text = "x"
script = ExtResource("3_0d3qd")

[node name="SettingsButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 64.0
offset_right = 56.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("1_xbdg5")
theme_override_font_sizes/font_size = 24
text = "*"
script = ExtResource("3_0d3qd")

[node name="HelpButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 120.0
offset_right = 56.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("1_xbdg5")
theme_override_font_sizes/font_size = 24
text = "?"
script = ExtResource("3_0d3qd")

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
